@@ -26,7 +26,7 @@
   <!-- Any devices we wish to special case and support out of the box -->
   <Extension path="/Banshee/Dap/MassStorage/Device">
     <MassStorageDevice class="Banshee.Dap.MassStorage.AndroidDevice" 
-        vendor-name="HTC" product-name="T-Mobile G1"
+        vendor-name="HTC" product-name="Android G1 Phone"
         vendor-id="0x0bb4" product-id="0x0c01,0x0c02"/>
   </Extension>
 
